// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.SwitchSelector props testing bgStyle="filled" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        bgStyle="filled"
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing bgStyle="outline" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing bgStyle="transparent" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        bgStyle="transparent"
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing bgStyle="underline" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        bgStyle="underline"
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing bgStyle=undefined 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing borderRadius="50%" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        borderRadius="50%"
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing borderRadius=8 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        borderRadius={8}
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing borderRadius=undefined 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing className="my-classname" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector my-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing className="test-classname" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector test-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing controlled=false 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing controlled=true 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing default props 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing disabled=false 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing disabled=false 3`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing disabled=true 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={true}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        disabled={true}
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        readOnly={true}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing disabled=true 3`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={true}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        disabled={true}
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        readOnly={true}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing elevation=-1 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        elevation={-1}
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing elevation=1 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        elevation={1}
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing elevation=5 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        elevation={5}
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing elevation=undefined 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing feedback="error" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      feedback="error"
      readonly={false}
    >
      <SwitchSelector
        borderWidth={2}
        borderWidthFeedback={2}
        className="uu-forms-ps7vq7"
        colorSchema="danger"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing feedback="initial" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing feedback="loading" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      feedback="loading"
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        disabled={true}
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing feedback="success" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      feedback="success"
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        colorSchema="success"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing feedback="warning" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-warning uu5-forms-input-icon"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      feedback="warning"
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        colorSchema="warning"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing fullTextSearchPriority=0 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing fullTextSearchPriority=0 2`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing hidden=false 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing hidden=false 3`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing hidden=true 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing hidden=true 3`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing id="myId" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="myId"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing id="test-id" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="test-id"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing inputAttrs={"type":"email","width":"150px"} 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        mainAttrs={
          Object {
            "type": "email",
            "width": "150px",
          }
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing inputColWidth="xs12 s6 m8 l9" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing inputColWidth="xs12 s9" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing label="Your personal email" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
  >
    <label
      colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
      content="Your personal email"
      for="uuID-input"
    />
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing labelAlignment="xs-left s-right" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing labelAlignment="xs-right s-left" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing labelColWidth="xs12 s3" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing labelColWidth="xs12 s6 m4 l3" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing mainAttrs=undefined 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing message="Your password is too short!" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      message="Your password is too short!"
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing name="myName" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing nestingLevel="box" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing nestingLevel="inline" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-inline uu5-forms-input-auto-width"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing noPrint=false 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing noPrint=true 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing readOnly=false 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing readOnly=true 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-read-only"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={true}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        readOnly={true}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing selected=false 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing selected=true 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-common-selected uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing size="l" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-l uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        size="l"
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing size="m" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing size="s" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        size="s"
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing size="xl" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-xl uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        size="xl"
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing style="padding:8px; borderRadius: 2px" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing style={"backgroundColor":"red","color":"blue"} 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing style={"margin":8} 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={
      Object {
        "margin": 8,
      }
    }
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing tooltip="My Tooltip" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title="My Tooltip"
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing value="high" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="high"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing value="low" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing value="normal" 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="normal"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;

exports[`UU5.Forms.SwitchSelector props testing value=undefined 1`] = `
<Resize
  onResize={[Function]}
>
  <div
    className="uu5-forms-switch-selector uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <InputWrapper
      colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
      disabled={false}
      readonly={false}
    >
      <SwitchSelector
        className="uu-forms-ps7vq7"
        items={
          Array [
            Object {
              "label": "Low",
              "value": "low",
            },
            Object {
              "label": "Normal",
              "value": "normal",
            },
            Object {
              "label": "High",
              "value": "high",
            },
          ]
        }
        onChange={[Function]}
        ref_={[Function]}
        value="low"
        width={null}
      />
    </InputWrapper>
  </div>
</Resize>
`;
